--- a/phamlinAssignment1.ipynb
+++ b/phamlinAssignment1.ipynb
@@ -45,7 +45,7 @@
     "num1 = int(input(\"Enter the first number: \"))\n",
     "num2 = int(input(\"Enter the second number: \"))\n",
     "\n",
-    "#calling the functin with the given inputs \n",
+    "#calling the function with the given inputs \n",
     "sumFunction(num1, num2)\n"
    ]
   },
