--- a/phamlinAssignment1.ipynb
+++ b/phamlinAssignment1.ipynb
@@ -81,7 +81,7 @@
     "num1 = 0\n",
     "num2 = 0\n",
     "\n",
-    "#obraining inputs from user and converting to an int\n",
+    "#obtaining inputs from user and converting to an int\n",
     "num1 = int(input(\"Enter the first number: \"))\n",
     "num2 = int(input(\"Enter the second number: \"))\n",
     "\n",
